# cookiesync

./: .gitignore  .goreleaser.yaml  .pre-commit-config.yaml  AGENTS.md  AGENTS.src.md  CHANGELOG.md  HELPER_SIGNING.md  LICENSE  README.md  STYLEGUIDE.md  Taskfile.yml  go.mod  go.sum  great-docs.yml  ioreg_err.txt  main.go  netstat_err.txt  ops.json  pyproject.toml
.claude/: settings.json
.claude/fragments/.claude/settings.json/: settings-overrides.fragment.json
.claude/fragments/.gitignore/: gitignore-local.fragment.gitignore
.claude/fragments/AGENTS.md/: cookiesync-development-guide.fragment.md  layout.toml  style.fragment.md
.claude/hooks/: packs.toml
.github/cask/: cookiesync-keyhelper.rb.tmpl  cookiesync.rb.tmpl
.github/scripts/: verify-release-workflow.sh
.github/workflows/: ci.yml  docs.yml  helper-release.yml  release-pypi.yml  release.yml
cookiesync/: __init__.py  __main__.py  cli.py  helper.py  paths.py  registry.py  service.py  state.py  transport.py
cookiesync/cookie/: __init__.py  backend.py  browsers.py  consent.py  crypto.py  domains.py  getcookie.py  merge.py  models.py  pipeline.py  serialize.py  stores.py
cookiesync/cookie/vault/: keyvault.swift
cookiesync/daemon/: __init__.py  backend_ssh.py  cache.py  engine.py  rpc.py  server.py  session.py  sync.py  wire.py
cookiesync/daemon/vault/: keycache.swift
docs/: helper-signing.md
docs/scripts/: demo.sh  native_reference_titles.py
helper/: README.md  build-app.sh  cookiesync-keyhelper.entitlements
helper/Sources/cookiesync-keyhelper/: main.swift
internal/auth/: auth.go  bridge.go  bridge_routed_test.go  bridge_test.go  broker.go  broker_test.go  consent.go  consent_test.go  fakes_test.go  grants.go  grants_test.go  release.go
internal/bridge/: bridge_test.go  cdp.go  chrome_child.go  keepalive.go  keepalive_test.go  launch.go  launch_test.go  process.go  process_test.go  seed.go  seed_test.go  server.go  ssh.go  tunnel.go  tunnel_test.go
internal/cache/: cache.go  cache_test.go
internal/cli/: bridge.go  bridge_plugin.go  bridge_test.go  browser.go  browser_test.go  chrome_child.go  cookies.go  cookies_test.go  doctor.go  doctor_test.go  host.go  install.go  list.go  list_test.go  requestor.go  requestor_test.go  root.go  root_test.go  rpc.go  rpc_pipeline.go  rpc_test.go  state.go  state_test.go  sync.go  tui.go
internal/cookie/: applystable_test.go  browsers.go  browsers_test.go  consent.go  consent_test.go  crypto.go  crypto_test.go  digest.go  digest_test.go  domains.go  domains_test.go  getcookie.go  merge.go  merge_test.go  models.go  models_test.go  pipeline.go  pipeline_test.go  seedstate.go  seedstate_test.go  serialize.go  serialize_test.go  stores.go  stores_test.go  webstorage.go  webstorage_test.go  wire.go  wire_test.go
internal/cookie/testdata/: pipeline_oracle.py  unicode_cookie.json  unicode_cookie.netscape
internal/daemon/: bridge.go  bridge_consent_test.go  bridge_process_test.go  bridge_processes.go  bridge_processes_test.go  bridge_test.go  consent.go  consent_test.go  daemon.go  daemon_test.go  fakes_test.go  grants.go  grants_darwin_test.go  grants_test.go  handlers.go  handlers_test.go  integration_test.go  plist.go  remote_bridge.go  remote_bridge_test.go  runtime_test.go  session.go  session_test.go  svcconsumer.go  union.go
internal/engine/: converge.go  converge_test.go  driver.go  driver_test.go  fetcher.go  locks.go  orchestrate.go  orchestrate_test.go  recorder.go  source.go  ssh.go  ssh_test.go  watchitems.go  watchitems_test.go
internal/helper/: helper.go  helper_test.go
internal/mesh/: mesh.go  mesh_test.go
internal/paths/: helper.go  paths.go  paths_test.go
internal/rpc/: client.go  decode.go
internal/service/: service.go  service_test.go
internal/state/: endpoint.go  settings.go  state.go  state_test.go
internal/testutil/: testutil.go  testutil_test.go
internal/transfer/: service.go  service_test.go
internal/tui/: browsers.go  browsers_items.go  browsers_test.go  keys.go  msgs.go  tui.go
internal/watch/: boundary.go  engine.go  helpers_test.go  loop_test.go  watch.go  watch_test.go
tests/: conftest.py  test_anti_echo.py  test_browser_cli.py  test_cache.py  test_cli.py  test_daemon_cli.py  test_daemon_integration.py  test_engine.py  test_helper.py  test_paths.py  test_registry.py  test_rpc.py  test_service.py  test_session.py  test_state.py  test_sync.py  test_transport.py
tests/cookie/: test_browsers.py  test_consent.py  test_crypto.py  test_domains.py  test_getcookie.py  test_merge.py  test_pipeline.py  test_serialize.py  test_stores.py
