[project]
name = "cookiesync-cli"
# Inert sentinel: the real version is set from the release tag (uv version --frozen); never written back here.
version = "0.0.0"
description = "Sync your browser cookies across machines."
readme = "README.md"
license = "PolyForm-Noncommercial-1.0.0"
license-files = ["LICENSE"]
authors = [{ name = "Yasyf Mohamedali", email = "yasyfm@gmail.com" }]
keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.20",
    "click>=8",
    "cryptography>=43",
    "filelock>=3.16",
    "loguru>=0.7",
    "watchfiles>=0.24",
]

[project.optional-dependencies]
dev = [
    "anyio>=4",
    "pytest>=8.0",
    "ruff>=0.8",
]

[project.scripts]
cookiesync = "cookiesync.cli:main"

[project.urls]
Homepage = "https://github.com/yasyf/cookiesync"
Repository = "https://github.com/yasyf/cookiesync"
Issues = "https://github.com/yasyf/cookiesync/issues"
Changelog = "https://github.com/yasyf/cookiesync/blob/main/CHANGELOG.md"

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "cookiesync"
module-root = ""

[tool.pytest.ini_options]
testpaths = ["tests"]
anyio_mode = "auto"
addopts = ["-ra", "--strict-markers", "--tb=short", "-q"]
markers = [
    "unit: Pure unit tests",
    "integration: Integration tests",
]

# ty (Astral) is the default type checker. It runs on every commit via the prek
# hook (astral-sh/ty-pre-commit — the hook rev pins the ty version) and in CI,
# warnings only, never blocking. Ad hoc: `uvx prek run ty --all-files`.
# It is fast, understands modern syntax, and avoids the strict-pyright false
# positives on pydantic/attrs-style dynamic defaults and PK-type overrides.
[tool.ty.rules]
# Every diagnostic surfaces as a warning: ty exits 0 and never blocks a commit or CI.
all = "warn"
# Keep cross-checker `# type: ignore` / `# pyright: ignore` comments from tripping ty.
unused-type-ignore-comment = "ignore"
unresolved-import = "ignore"

# pyright is kept as a secondary checker (editors / `uvx pyright`). Basic mode plus
# a few disables covers the noise; ty is the default checker, surfaced as warnings
# at commit time and in CI.
[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "basic"
include = ["cookiesync"]
venvPath = "."
venv = ".venv"
reportImplicitOverride = "none"
reportIncompatibleVariableOverride = "none"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownParameterType = "none"
reportUnknownLambdaType = "none"
reportMissingTypeArgument = "none"
reportPrivateImportUsage = "none"
reportUnusedCallResult = "none"

[tool.ruff]
line-length = 120
target-version = "py313"
src = [".", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
# __init__.py re-exports the public API via plain imports (`from .foo import
# Bar`; no `as` alias, no __all__). F401 stays active in every other module.
"__init__.py" = ["F401"]
